--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,36 @@ body{
 
 }
 
+
 .header{
-    height: 100vh;
-    width: 250px;
+    height: 120vh;
     background-color: #1d1d1d;
-    top: 0;
-    left: 0;
+    width: 60px;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow: hidden;
     
-    padding-top: 20px;
+    transition: width .75s ease;
+    
+}
+
+.header:hover{
+    width: 4000px;
 }
 
 .menu{
     display: block;
     padding: 12px 16px;
     list-style: none;
-       
+    margin-top: 100px;
+    width: 200px;
+    overflow: hidden;
+    transition: width .75 ease;
+    
+   
 }
+
+
 
 a{
     text-decoration: none;
@@ -39,22 +53,62 @@ h1{
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 0 auto;
-    grid-gap: 10px;
+    grid-gap: 20px;
     padding: 30px 250px;
     flex-wrap: wrap;
+    max-width: 1000px;
+    height: 100vh;
 
+
+}
+
+.card{
+    flex-wrap: wrap;
+    transition: 0.05s ease;
+    cursor: pointer;
+}
+
+.card >p{
+    background-color: #1d1d1d;
+    color: #f1ca84;
+    padding: 10px;
+    border-radius: 5%;
+    
+
+}
+
+.card:hover > :not(:hover){
+    opacity: 0.3;
+
+}
+
+.card:hover{
+    transform: scale(1.1);
 }
 
 img{
     max-width: 100%;
-    display: block;
+    display: flex;
+    border-radius: 5%;
     
 }
 
 .card:nth-child(1){
-    grid-row: 1/4;
+    grid-row: 1 / 4;
     display: block;
     max-width: 100%;
+}
+
+
+a:hover{
+    background-color: #f1ca84;
+    color: #1d1d1d;
+    padding: 2px;
+    
+}
+
+p{
+    text-align: center;
 }
 
 
